# advent-of-code

./: .gitignore  README.md
2015/01/: nql.hs  nql.ml
2015/02/: boxes.awk  boxes.hs
2015/03/: grid.hs  santa.ml
2015/04/: coinz.py
2015/05/: non.hs
2015/06/: flashing_lights.hs  lights.awk
2015/07/: gatekeeper.hs
2015/08/: escapade.hs
2015/09/: brutus.hs
2015/10/: runny.hs
2015/11/: pass.hs
2015/12/: jsonparty.py
2015/13/: et_tu.hs
2015/14/: d33r.hs
2015/15/: sadsack.hs
2015/16/: FemtoParsec.hs  knickknacks.hs
2015/17/: dynamo.rs  dynamo2.hs
2015/18/: gol.rs
2015/19/: foof.hs
2015/20/: elves.hs
2015/21/: dnd.hs
2015/22/: harry.hs
2015/23/: computron.hs  compy_386.awk  compy_386.ml  kessel.mli
2015/24/: threesum.hs
2015/25/: codez.hs
2016/01/: bunny.hs
2016/02/: bathroom.hs
2016/03/: FemtoParsec.hs  triggered.hs
2016/04/: mode.hs
2016/05/: dejavu.py
2016/06/: modesagain.hs
2016/07/: brak.hs
2016/08/: lcd.hs
2016/09/: deco.hs
2016/10/: zoomers.hs
2016/11/: Dijkstra.hs  notorious.hs
2016/12/: asm.awk  asm.hs
2016/13/: maze.hs
2016/14/: hash.py
2016/15/: disco.hs
2016/16/: ChunkyWindows.hs  draggin.hs
2016/17/: hashymaze.hs
2016/18/: ChunkyWindows.hs  safetydance.hs
2016/19/: meh.rs
2016/20/: naughtylist.hs
2016/21/: dumpster.hs
2016/22/: sendnodes.hs
2016/23/: asm.hs  input.txt  notes1.txt  notes2.txt
2016/24/: ducts.hs
2016/25/: asm.hs  input.c  notes.txt  notes2.txt  notes3.txt
2017/01/: digits.hs  digits.py  digits2.hs  digits2.rs
2017/02/: spreadsheet.hs  spreadsheet2.hs
2017/03/: spiral.hs  spiral2.hs
2017/05/: jump.ml  tramp.awk  tramp2.awk
2017/07/: tower.py
2017/08/: reggae.awk  reggae.ml
2017/09/: recdesc.py  stacky.py
2017/11/: hex.hs
2017/12/: group.hs
2017/13/: firewall.hs
2017/15/: rng.hs
2017/16/: arewedancer.hs
2017/17/: Circ.hs  spinnaz.hs  spinnaz2.c
2017/18/: Q.hs  d2et.hs  duet.hs
2017/19/: maze.hs
2017/20/: tricky.hs
2017/21/: dtfrac.hs  frac.hs
2017/22/: virus.hs  virus2.hs
2017/23/: copro.hs  eh.c
2017/24/: Combo.hs  bridgetoofar.hs
2017/25/: turing.awk  turing.hs
2018/: particles.hs
2018/01/: frequency.hs  frequency2.hs
2018/02/: checksum.hs  diff.hs
2018/03/: claim.py
2018/05/: react.hs  react2.hs
2018/06/: manhattan.hs
2018/07/: kahn.py
2018/08/: cppmem.cpp  hsmem.hs  rsmem.rs
2018/09/: bigmarbles.rs  marbles.hs
2018/10/: particles.hs
2018/11/: grid.cpp  grid.rs
2018/13/: minecarts.rs  minecarts_ansi.rs
2018/14/: recipe.hs  recipe.rs
2018/15/: AllShortest.hs  rogue.hs
2018/16/: mysterymachine.hs
2018/17/: claydar.hs
2019/: .gitignore
2019/01/: problem1.hs  problem1.py  problem1.rs
2019/02/: intawk.awk  intcode.py  intcode.rs
2019/03/: cross.hs
2019/04/: passwd.py  passwd.rs  passwd2.rs
2019/05/: intawk.awk
2019/05/intcode/: Cargo.toml
2019/05/intcode/src/: lib.rs
2019/07/intcode/: Cargo.toml
2019/07/intcode/src/: lib.rs
2019/19/: Cargo.toml
2019/19/src/: problem1.rs  problem2.rs  viz.rs
2019/intcaml/: dune-project  intcaml.opam
2019/intcaml/lib/: cpu.ml  cpu.mli  dune  instruction.mli  intcode.ml  intcode.mli  intcode_loader.ml  intcode_loader.mli  io.ml  io.mli  machine.ml  machine.mli  memory.mli  result_monad.ml  result_monad.mli
2019/intcaml/test/: day2.ml  day7.ml  dune
2019/intcaml5/: dune-project  intcaml5.opam
2019/intcaml5/lib/: aio.ml  aio.mli  cpu.ml  dune  error.mli  io.ml  io.mli  machine.ml  machine.mli  memory.ml
2019/intcaml5/test/: day2.ml  day7.ml  dune
2019/intcode-rs/: Cargo.toml
2019/intcode-rs/examples/: alloc.ic  alloc.ica  ascii.ic  ascii.ica  cat.ic  cat.ica  fac.ic  fac.ica  farce.ic  farce.ica  farce2.ic  farce2.ica  farce3.ic  farce3.ica  farce4.ic  farce4.ica  intcode.ic  intcode.ica  intforth.f  intforth.ic  intforth.ica
2019/intcode-rs/src/: asm.rs  asm_parser.rs  blocking.rs  disasm.rs  lib.rs  map_file.rs  memory.rs
2020/: 07.py
2020/18/expr/: LICENSE  expr.cabal
2020/18/expr/src/: Main.hs  MainAdv.hs
2022/: crates.awk
util/: AStar.hs  Beefs.hs  Circ.hs  Dijkstra.hs  GreatWall.hs  ModInv.hs  Q.hs  crt.rs  kessel.ml  q.awk
(+351 files in other folders)
