[package]
name = "intcode"
version = "0.1.0"
authors = ["derrickturk <dwt@terminusdatascience.com>"]
edition = "2018"

[[bin]]
name = "icdis"
path = "src/bin/disasm.rs"

[[bin]]
name = "icasm"
path = "src/bin/asm.rs"

[[bin]]
name = "icvm"
path = "src/bin/vm.rs"

[[bin]]
name = "ictrace"
path = "src/bin/tracevm.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["thread-pool"] }
structopt = "0.3"
regex = "1"
lazy_static = "1.4.0"
