[package]
name = "intcode"
version = "0.1.0"
authors = ["derrickturk <dwt@terminusdatascience.com>"]
edition = "2018"

[[bin]]
name = "problem1"
path = "src/bin/problem1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
