name:                expr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/derrickturk/expr#readme
license:             BSD3
license-file:        LICENSE
author:              Derrick W. Turk
maintainer:          dwt@terminusdatascience.com
copyright:           dwt | terminus data science, LLC
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable expr
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 8.0 && < 9
                     , parser-combinators >= 1.2 && < 2
                     , text >= 1.2 && < 2

executable expradv
  hs-source-dirs:      src
  main-is:             MainAdv.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 8.0 && < 9
                     , parser-combinators >= 1.2 && < 2
                     , text >= 1.2 && < 2
